--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # _config.yml
 
 # required, replace with your own information -----
-title: Hello for Github Pages
-author: Sara Gong
+title: Olivia Fiol
+author: Olivia Fiol
 description: > 
-  A minimalist template for designing a personal GitHub Pages website - without typing a single line of code.
+  A portfolio space to host professional and personal work.
 baseurl: ""
 
 plugins:
