--- a/_data/work.yml
+++ b/_data/work.yml
@@ -2,16 +2,18 @@
 # in the root directory
 
 work:
-  - category: New York City
+  - category: drawing + painting
     items:
       - item: example.html
-        image: /images/NYC1.jpg # optionally, include the file path for an image for each item
+        image: /images/IMG_0058.jpeg # optionally, include the file path for an image for each item
       - item: example.html
-        image: /images/NYC2.jpg
+        image: /images/IMG_9266.jpeg
       - item: example2.html
-        image: /images/NYC3.jpg
+        image: /images/IMG_9967.jpeg
       - item: example3.html
-        image: /images/NYC4.jpg
+        image: /images/47EE6D93-B3FF-47ED-9490-2C2882B820DC.jpg
+      - item: example.html
+        image: /images/D496767E-DEAE-471F-BBCC-73AE759107CC.jpg  
   - category: Los Angeles
     items:
       - item: example.html
