--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Hello. I'm Jami Gibbs."
-email: 'jami0821@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jamigibbs.github.io/phantom" # the base hostname & protocol for your site, e.g. https://example.com
-twitter_username: 'jamigibbs'
-github_username: 'jamigibbs'
-medium_username: 'blog.jamigibbs.com'
+title: "hi there, my name is olivia fiol (she/her/ella)."
+email: 'oliviafiol2@gmail.com'
+description: "a personal portfolio"
+baseurl: "/home" # the subpath of your site, e.g. /blog
+url: "https://olivefoil.github.io" # the base hostname & protocol for your site, e.g. https://example.com
+twitter_username: 'livfiol'
+github_username: 'olivefoil'
 
 # Build settings
 markdown: kramdown
@@ -97,5 +96,7 @@ enable_contact: false
 #### Phantom Navigation menu
 enable_nav: true
 nav_item:
-  - { url: '/', text: 'Home' }
-  - { url: '/about', text: 'About' }
+  - { url: '/', text: 'home' }
+  - { url: '/about', text: 'about' }
+  - { url: '/portfolio', text: 'portfolio'}
+  - { url: '/contact', text: 'contact'}
